--- a/string_bld_test/string_bld_test.html
+++ b/string_bld_test/string_bld_test.html
@@ -7,8 +7,8 @@
   
     <title>سباق اللغات البرمجية لمناولة النصوص الضخمة.. من يكسب</title>
 
-    <meta name="keywords" content="f#, برمجة,  دروس برمجة, البرمجة الدالية, كورس" />
-    <meta name="description" content="العمليات التي تتم على الدالة في اللغات البرمجية التي تدعم المفايم الدالية" />
+    <meta name="keywords" content="f#, برمجة,  اختبارات, البرمجة الدالية, كورس" />
+    <meta name="description" content="اختبار أداء اللغات البرمجية عند التعامل مع أحجام ضخمة للنصوص" />
 </head>
 <body>
 
@@ -26,18 +26,18 @@
 
 
 
-<h1>سباق اللغات البرمجية لمناولة النصوص الضخمة.. من يكسب</h1>
+<h1>سباق اللغات البرمجية لمناولة النصوص الضخمة.. من يكسب؟</h1>
 
-<p>ما هي اللغات البرمجية الأكثر قدرة على التعامل مع الملفات النصية الكبيرة وماهي أكثرهم سرعة في ذلك؟</p>
+<p>ما هي اللغات البرمجية الأكثر قدرة على التعامل مع الملفات النصية الكبيرة؟ وماهي أكثرهم سرعة في ذلك؟</p>
 
-<p>قمت بإعداد مجموعة من البرامج المتطابقة بعدة لغات برمجية، كلّ برنامج يقوم بانتاج نص من خلال مراكمة بنائه بتكرار محدد، حيث  يقوم في كل تكرار بإضافة جزء للنص الأصلي، بعدها يحفظ هذا النصّ دفعة واحدة في ملف.</p>
+<p>قمت بإعداد مجموعة من البرامج المتطابقة بعدة لغات برمجية، كلّ برنامج يقوم بانتاج نصّ من خلال مراكمة بنائه بتكرار محدد، حيث  يقوم في كل تكرار بإضافة جزء للنص الأصلي، بعدها يقوم البرنامج بحفظ هذا النصّ دفعة واحدة في ملف.</p>
 
-<p>سنقوم بتشغيل هذه البرامج على عدة جولات ؛ كل جولة نستهدف توليد نص أكبر حجما من الجولة التي قبلها.</p>
+<p>سنقوم بتشغيل هذه البرامج على عدة جولات ؛ كل جولة تستهدف توليد نص أكبر حجما من الجولة التي قبلها.</p>
 
-<p>التفاصيل الفنية تركتها في آخر المقال للمهتمين. أو في منصة GitHub حيث وضعت الكود المصدري للغات المشاركة في السباق.</p>
+<p>التفاصيل الفنية تركتها في آخر المقال للمهتمين. أو في منصة  <a href="https://github.com/shagrouni/langs_string_build_test">GitHub</a> حيث وضعت الكود المصدري للغات المشاركة في السباق.</p>
 
 <p>اللغات المستهدفة عددها 18 لغة وهي:
-Rust, Go, C, C++, Free Pascal, C#, F#, Java, Python, OCaml, Dart, D, Nim, V, Julia, Red, Crystal, Perl.</p>
+Rust, Go, C, <span dir="ltr">C++</span>, Free Pascal, <span dir="ltr">C#</span>, <span dir="ltr">F#</span>, Java, Python, OCaml, Dart, D, Nim, V, Julia, Red, Crystal, Perl.</p>
 
 <h2>بعض الملاحظات السريعة قبل بدء السباق:</h2>
 
@@ -45,7 +45,7 @@ Rust, Go, C, C++, Free Pascal, C#, F#, Java, Python, OCaml, Dart, D, Nim, V, Jul
   <li>حتى يتم تسريع عمل بناء الكتلة النصية، قمت باستخدام وظيفة ال String Builder في كل لغة، بعض اللغات تستخدم نفس التقنية داخليا مثل Rust، لغة C لاتوجد بها هذه التقنية فتم بناء مجموعة إجراءات لمحاكاة هذه التقنية.</li>
   <li>لم أقم بأية عمليات ضبط أو حيل لتسريع أو تحسين الأداء، واكتفيت باستخدام ما تقدمة اللغة بداهة.</li>
   <li>لنفس السبب السابق، كان يمكن حفظ النص الضخم على دفعات chunks  بدل أن يفشل البرنامج في حفظه دفعة واحدة وبدل ذلك تركت الأمر للقدرات الموجودة في كل لغة.</li>
-  <li>السباق لايعدّ اختبارا مهنيا دقيقيا، لأن الاختبارات الحقيقية يتم بناؤها لفحص أداء عدة محاور في البرمجة وليس فقط بناء كتلة نصية (مجرّد فضول شخصي لمعرفة قدرة كل لغة في جانب محدد).</li>
+  <li>السباق لايعدّ اختبارا مهنيا دقيقا، لأن الاختبارات الحقيقية يتم بناؤها لفحص أداء عدة محاور في البرمجة وليس فقط بناء كتلة نصية (مجرّد فضول شخصي لمعرفة قدرة كل لغة في جانب محدد).</li>
   <li>لست خبيرا في أي من اللغات المستخدمة.</li>
   <li>سنتحدث ما أمكن عن كل لغة في سياق الحديث داخل المقال.</li>
   <li>تم الاستعانة بالذكاء الصناعي لإعداد برنامج كل لغة.</li>
@@ -146,17 +146,16 @@ Rust, Go, C, C++, Free Pascal, C#, F#, Java, Python, OCaml, Dart, D, Nim, V, Jul
   </tbody>
 </table>
 
-<p>الثلاثة الأكثر سرعة هم بالترتيب Rust ثم Crystal ثم جافا  بسرعات متساوية تقريبا. كنت أتوقع C  و C++ أن تكونا في المقدمة، بسبب شهرتهما بالسرعة بين اللغات و الأساس لمقارنة أداء اللغات الأخرى. كذلك لم أتوقّع أن تكون جافا بهذه السرعة مقارنة ب C#. نلاحظ أيظا أن F# أبطأ قليلا من C# برغم أنها تعملان في نفس البيئة .Net أحد أسباب ذلك أن F# يتم تحويلها أولا إلى C# قبل ترجمتها ل Byte code .</p>
+<p>الثلاثة الأكثر سرعة هم بالترتيب Rust ثم Crystal ثم جافا  بسرعات متساوية تقريبا. كنت أتوقع C  و <span dir="ltr">C++</span> أن تكونا في المقدمة، بسبب شهرتهما بالسرعة بين اللغات و وأنهما عادة الأساس لمقارنة أداء اللغات الأخرى. كذلك لم أتوقّع أن تكون جافا بهذه السرعة مقارنة ب <span dir="ltr">C#</span>. نلاحظ أيظا أن <span dir="ltr">F#</span> أبطأ قليلا من <span dir="ltr">C#</span> برغم أنها تعملان في نفس البيئة .Net أحد أسباب ذلك أن <span dir="ltr">F#</span> يتم تحويلها أولا إلى <span dir="ltr">C#</span> قبل ترجمتها ل Byte code .</p>
 
-<p>لغة Crystal جاءت الثانية بعد Rust لا أحد يتوقّع ذلك، كذلك الأمر بالنسبة للغة Perl التي تفوّقت على C و C++.</p>
+<p>لغة Crystal جاءت الثانية بعد Rust لم أكن أتوقّع ذلك، كذلك الأمر بالنسبة للغة Perl التي تفوّقت على C و <span dir="ltr">C++</span>.</p>
 
 <p>نتيجة لغة Go تبدو جيدة  (أقل من أربع ثواني)، المفاجأة الكبيرة كانت لغة Python  التي استطاعت أن تسبق لغات مثل Free Pascal.</p>
 
-<p>لغة Red جاءت الأخيرة للأسف مسجلة 17 ثانية أي ضعف اللغة التي قبلها في الترتيب ، أقول لللأسف لأنها لغة أحبها وأحب فلسفتها وأصحابها يسوقون للهجة منها للتعامل مع تقنيات BlockChain.</p>
+<p>لغة Red جاءت الأخيرة للأسف مسجلة 17 ثانية أي ضعف اللغة التي قبلها في الترتيب ، أقول لللأسف لأنها لغة أحبها وأحب فلسفتها وصيغتها النحوية وأصحابها يسوقون للهجة منها للتعامل مع تقنيات BlockChain.</p>
 
 
-<h3>ألجولة الثانية</h2>
-------------
+<h3>الجولة الثانية</h3>
 <p>تستهدف بناء كتلة نصية بحجم 1 قيقا بايت، من خلال تكرارات عددها 100 مليون تكرار فكانت نتيجة الأداء  كالتالي:</p>
 
 
@@ -253,12 +252,12 @@ Rust, Go, C, C++, Free Pascal, C#, F#, Java, Python, OCaml, Dart, D, Nim, V, Jul
       <td></td>
     </tr>
     <tr>
-      <td>F#</td>
+      <td>&nbsp&nbsp&nbsp&nbspF#</td>
       <td></td>
       <td>Failed</td>
     </tr>
     <tr>
-      <td>RED</td>
+      <td>&nbsp&nbsp&nbsp&nbspRED</td>
       <td></td>
       <td>Failed</td>
     </tr>
@@ -268,11 +267,11 @@ Rust, Go, C, C++, Free Pascal, C#, F#, Java, Python, OCaml, Dart, D, Nim, V, Jul
 
 
 
-<p>لنرى أولا من خرج من السباق. لغتان هما Red  و F# . كما رأينا في الجولة السابقة لغة Red جاءت الأخيرة وبفارق كبير مع ما قبلها ، أما لغة F# فمن المحزن خروجها مبكرا، وهذا يدفعنا للتساؤل : هل ستقاوم أختها C# في الجولات القادمة؟</p>
+<p>لنرى أولا من خرج من السباق. لغتان هما Red  و <span dir="ltr">F#</span> . كما رأينا في الجولة السابقة لغة Red جاءت الأخيرة وبفارق كبير مع ما قبلها ، أما لغة <span dir="ltr">F#</span> فمن المحزن خروجها مبكرا، وهذا يدفعنا للتساؤل : هل ستقاوم أختها <span dir="ltr">C#</span> في الجولات القادمة؟</p>
 
-<p>لغة Rust  كانت في المقدمة تليها كريستال ثم Java  بعدها لغة C#  بضعف سرعة جافا ، نلاحظ أن جافا و C#  فشلتا في حفظ النص في ملف. أي نجحتا في إعداد الكتلة النصية المطلوبة في الذاكرة و لم تتمكنا من حفظها في ملف نصّي.</p>
+<p>لغة Rust  كانت في المقدمة تليها كريستال ثم Java  بعدها لغة <span dir="ltr">C#</span>  بضعف سرعة جافا ، نلاحظ أن جافا و <span dir="ltr">C#</span>  فشلتا في حفظ النص في ملف. أي نجحتا في إعداد الكتلة النصية المطلوبة في الذاكرة و لم تتمكنا من حفظها في ملف نصّي.</p>
 
-<p>لغة Crystal أداؤها ممتاز وهي من اللغات التي تهدف لتكون بديلا عن لغة C/C++ ، واستلهمت لغة Ruby لتكون لغة أنيقة وموجزة ومعبّرة.</p>
+<p>لغة Crystal أداؤها ممتاز وهي من اللغات التي تهدف لتكون بديلا عن لغة C/<span dir="ltr">C++</span> ، واستلهمت لغة Ruby لتكون لغة أنيقة وموجزة ومعبّرة.</p>
 
 <p>لغة Nim مازالت تحتفظ بأسبقيتها على لغة C. في الواقع لغة Nim يقوم محوّلها بتحويلها إلى لغة C أولا ثم باختيار أحد تنفيذات C يتم ترجمتها لملف تنفيذي، لذلك لا نستغرب سرعة الأداء لديها.
 برنامج Python  كان سريعا في هذه الجولة أيضا.</p>
@@ -352,27 +351,27 @@ Rust, Go, C, C++, Free Pascal, C#, F#, Java, Python, OCaml, Dart, D, Nim, V, Jul
       <td></td>
     </tr>
     <tr>
-      <td>Java</td>
+      <td>&nbsp&nbsp&nbsp&nbspJava</td>
       <td></td>
       <td>Failed</td>
     </tr>
     <tr>
-      <td>C#</td>
+      <td>&nbsp&nbsp&nbsp&nbspC#</td>
       <td></td>
       <td>Failed</td>
     </tr>
     <tr>
-      <td>Crystal</td>
+      <td>&nbsp&nbsp&nbsp&nbspCrystal</td>
       <td></td>
       <td>Failed</td>
     </tr>
     <tr>
-      <td>Free Pascal</td>
+      <td>&nbsp&nbsp&nbsp&nbspFree Pascal</td>
       <td></td>
       <td>Failed</td>
     </tr>
     <tr>
-      <td>V</td>
+      <td>&nbsp&nbsp&nbsp&nbspV</td>
       <td></td>
       <td>Failed</td>
     </tr>
@@ -383,12 +382,12 @@ Rust, Go, C, C++, Free Pascal, C#, F#, Java, Python, OCaml, Dart, D, Nim, V, Jul
 
 
 
-<p>خرجت جافا من السباق، وكما كان متوقعا بعد خروج F#؛ خرجت أختها لغة C# ، وخرجت معهم Free Pascal و Crystal و لغة V. لغات جافا و F# و C# و Crystal قدمت أداءًا متفوقا لكن ليس مع الأحجام الكبيرة من البيانات.</p>
+<p>خرجت جافا من السباق، وكما كان متوقعا بعد خروج <span dir="ltr">F#</span>؛ خرجت أختها لغة <span dir="ltr">C#</span> ، وخرجت معهم Free Pascal و Crystal و لغة V. لغات جافا و <span dir="ltr">F#</span> و <span dir="ltr">C#</span> و Crystal قدمت أداءًا متفوقا لكن ليس مع الأحجام الكبيرة من البيانات.</p>
 
-<p>المتصدر لسباق السرعة هي Rust، ثم - وبفارق كبير - لفات  Cو Nim و Perl بأداء متقارب ثم C++. إلا أن C++ و Nim  الوحيدتان اللتان فشلتا في حفظ الكتلة النصية في ملف.</p>
+<p>المتصدر لسباق السرعة هي Rust، ثم - وبفارق كبير - لفات  Cو Nim و Perl بأداء متقارب ثم <span dir="ltr">C++</span>. إلا أن <span dir="ltr">C++</span> و Nim  الوحيدتان اللتان فشلتا في حفظ الكتلة النصية في ملف.</p>
 
 <p>لازالت لغة  Python متقدمة وتسبق لغات يفترض أنها سريعة مثل D و Go </p>
-<p>آخر القائمة كانت لغة OCaml وهي اللغة الأم للغة F# (لغة F# هي  تنفيذ للغة OCaml على بيئة .Net) قبلها كانت لغة Julia . </p>
+<p>آخر القائمة كانت لغة OCaml وهي اللغة الأم للغة <span dir="ltr">F#</span> (لغة <span dir="ltr">F#</span> هي  تنفيذ للغة OCaml على بيئة .Net) قبلها كانت لغة Julia . </p>
 
 <p>لغة Julia ظهرت 2012 وهي لغة تستهدف التحليلات الاحصائية والرقمية والمسائل العلمية والاحصائيات ولتكون خلفا للغة R يتم تشغيلها بمفسّر interpreter مثل لغة Python و Perl. </p>
 
@@ -472,18 +471,17 @@ Rust, Go, C, C++, Free Pascal, C#, F#, Java, Python, OCaml, Dart, D, Nim, V, Jul
 
 <p>في هذه الجولة لم يخرج أحد من السباق،Rust  في رأس القائمة تليها بفارق كبير C++ ،  لكن لغة C لم تتمكن من حفظ الملف النصي في هذه الجولة. لازالت Perl و Python  تبهرانا بسرعتهما متقدمة على لغات يفترض أنها محسوبة على اللغات السريعة مثل Julia و D. لكن نكرر أن الاختبارات الحقيقية لأداء اللغات تستند على عدة محاور ولا يتم الحكم على أداء لغة ما من جانب واحد فط.</p>
 
-<p>لغة Dart سجّلت 3.5 دقيقية فكانت بطيئة مقارنة بسرعة لغة Rust التي كانت 8 ثواني،، لكن بالمقابل لغة Dart  أنجزت كامل المهمة بنجاح بحفظها للملف في الوقت الذي فشلت فيه لغات C و C++ وNim.</p>
+<p>لغة Dart سجّلت 3.5 دقيقية فكانت بطيئة مقارنة بسرعة لغة Rust التي كانت 8 ثواني،، لكن بالمقابل لغة Dart  أنجزت كامل المهمة بنجاح بحفظها للملف في الوقت الذي فشلت فيه لغات C و <span dir="ltr">C++</span> وNim.</p>
 
 <h3>الجولة الخامسة:</h3>
---------------------
+
 <p>تمت مضاعقة حجم لكتلة النصية لتصبح 11 قيقا بايت وبعدد تكرارات ألف مليون تكرار.</p>
 
-<p>في هذه الجولة لم يخرج أحد من السباق،Rust  في رأس القائمة تليها بفارق كبير C++ ،  لكن لغة C لم تتمكن من حفظ الملف النصي في هذه الجولة. لازالت Perl و Python  تبهرانا بسرعتهما متقدمة على لغات يفترض أنها محسوبة على اللغات السريعة مثل Julia و D. لكن نكرر أن الاختبارات الحقيقية لأداء اللغات تستند على عدة محاور ولا يتم الحكم على أداء لغة ما من جانب واحد فط.</p>
+<p>في هذه الجولة لم يخرج أحد من السباق،Rust  في رأس القائمة تليها بفارق كبير <span dir="ltr">C++</span> . لازالت Perl و Python  تبهرانا بسرعتهما متقدمتان على لغات يفترض أنها محسوبة على اللغات السريعة مثل Julia و D. لكن نكرر أن الاختبارات الحقيقية لأداء اللغات تستند على عدة محاور ولا يتم الحكم على أداء لغة ما من جانب واحد فط.</p>
 
-<p>لغة Dart سجّلت 3.5 دقيقية فكانت بطيئة مقارنة بسرعة لغة Rust التي كانت 8 ثواني،، لكن بالمقابل لغة Dart  أنجزت كامل المهمة بنجاح بحفظها للملف في الوقت الذي فشلت فيه لغات C و C++ وNim.</p>
+<p>لغة Dart سجّلت 3.5 دقيقية فكانت بطيئة مقارنة بسرعة لغة Rust التي كانت 8 ثواني،، لكن بالمقابل لغة Dart  أنجزت كامل المهمة بنجاح بحفظها للملف في الوقت الذي فشلت فيه لغات C و <span dir="ltr">C++</span> وNim.</p>
 
 <h3>الجولة الخامسة:</h3>
-----------------
 <p>تمت مضاعقة حجم لكتلة النصية لتصبح 11 قيقا بايت وبعدد تكرارات ألف مليون تكرار.</p>
 </div>
 
@@ -539,17 +537,17 @@ Rust, Go, C, C++, Free Pascal, C#, F#, Java, Python, OCaml, Dart, D, Nim, V, Jul
       <td></td>
     </tr>
     <tr>
-      <td>D</td>
+      <td>&nbsp&nbsp&nbsp&nbsp D</td>
       <td></td>
       <td>Failed</td>
     </tr>
     <tr>
-      <td>OCaml</td>
+      <td>&nbsp&nbsp&nbsp&nbsp OCaml</td>
       <td></td>
       <td>Failed</td>
     </tr>
     <tr>
-      <td>Dart</td>
+      <td>&nbsp&nbsp&nbsp&nbsp Dart</td>
       <td></td>
       <td>Failed</td>
     </tr>
@@ -559,7 +557,7 @@ Rust, Go, C, C++, Free Pascal, C#, F#, Java, Python, OCaml, Dart, D, Nim, V, Jul
 
 <div dir="rtl">
 
-<p>في هذه الجولة خرجت اللغات D وOCaml و Dart، ولا فرق تقريبا في ترتيب سرعة اللغات.  D  من اللغات الجميلة والداعمة لعدة مذاهب برمجية Paradigms  ، أما لغةOCaml  فهي من عائلة ML مثل Haskel و F# وهي أولى محاولات نقل اللغات الدالية Functional من الوسط الأكاديمي إلى الوسط الصناعي ، وأتبثت فعاليتها في التطبيقات العلمية والمالية.</p>
+<p>في هذه الجولة خرجت اللغات D وOCaml و Dart، ولا فرق تقريبا في ترتيب سرعة اللغات.  D  من اللغات الجميلة والداعمة لعدة مذاهب برمجية Paradigms  ، أما لغةOCaml  فهي من عائلة ML مثل Haskel و <span dir="ltr">F#</span> وهي أولى محاولات نقل اللغات الدالية Functional من الوسط الأكاديمي إلى الوسط الصناعي ، وأتبثت فعاليتها في التطبيقات العلمية والمالية.</p>
 
 <h3>الجولة السادسة:</h3>
 
@@ -626,9 +624,9 @@ Rust, Go, C, C++, Free Pascal, C#, F#, Java, Python, OCaml, Dart, D, Nim, V, Jul
 
 <p>لم يخرج أحد في هذه الجولة ولكن هنا تفشل Python  في حفظ الملف مثل C و Nim رغم أنها نجحت في توليده وبسرعة تفوقت بها على Go و Julia.  لغة Go متأخرة كثيرا فهي أبطا الجميع بمسافة كبيرة، فبينها وبين C ما يزيد عن 11 دقيقة ، وبينها وبين اللغة التي تسبقها Julia ستة دقائق.</p>
 
-<p>لغة Perl بالنسبة لي هي مفاجأة هذا السباق، هي لغة قديمة ظهرت في 1987 بغرض معالجة النصوص في الملفات النصية وتحليلها واستخراج النتائج منها، وتطوّرت لتكون لغة متكاملة ، ولكن تراجعت شعبيتها بسبب غرابة تركيبها النحوي المختصر وأخذت مكانها لغة بايثون. ولأنها أصلا مصممة لمناولة النصوص وتحليلها، لذلك يمكن أن نفهم تفوقها في هذا السباق.</p>
+<p>لغة Perl بالنسبة لي هي مفاجأة هذا السباق، هي لغة قديمة ظهرت في 1987 بغرض معالجة النصوص في الملفات النصية وتحليلها واستخراج النتائج منها، وتطوّرت لتكون لغة متكاملة ، ولكن تراجعت شعبيتها بسبب غرابة تركيبها النحوي المختصر وأخذت مكانها لغة بايثون. ولأنها أصلا مصممة لمناولة النصوص وتحليلها، لذلك يمكن أن يكون هذا سبب تفوقها في هذا السباق.</p>
 
-<p>أيضا نلاحظ أن الفارق الزمني بدأ يتقلّص بين Rust ولغات C  و C++.</p>
+<p>أيضا نلاحظ أن الفارق الزمني بدأ يتقلّص بين Rust ولغات C  و <span dir="ltr">C++</span>.</p>
 
 <h3>الجولة السابعة:</h3>
 
@@ -677,12 +675,12 @@ Rust, Go, C, C++, Free Pascal, C#, F#, Java, Python, OCaml, Dart, D, Nim, V, Jul
       <td></td>
     </tr>
     <tr>
-      <td>Go</td>
+      <td>&nbsp&nbsp&nbsp&nbsp Go</td>
       <td></td>
       <td>Failed</td>
     </tr>
     <tr>
-      <td>Python</td>
+      <td>&nbsp&nbsp&nbsp&nbsp Python</td>
       <td></td>
       <td>Failed</td>
     </tr>
@@ -691,7 +689,7 @@ Rust, Go, C, C++, Free Pascal, C#, F#, Java, Python, OCaml, Dart, D, Nim, V, Jul
 
 
 
-<p>تحية كبرى للغة Julia و لغة Perl ، صامدتان مع الكبار دون أن تفشلا في حفظ الملف. في الوقت التي خرجت فيه كل من  Go و Python. أيضا يتاكد تقلص الفارق الزمني بين Rust و C.</p>
+<p>تحية كبرى للغة Julia و لغة Perl ، صامدتان مع الكبار دون أن تفشلا في حفظ الملف. في الوقت التي خرجت فيه كل من  Go و Python. أيضا يتاكد تقلّص الفارق الزمني بين Rust و C.</p>
 
 <h3>الجولة الثامنة: (الأخيرة)</h3>
 
@@ -726,17 +724,17 @@ Rust, Go, C, C++, Free Pascal, C#, F#, Java, Python, OCaml, Dart, D, Nim, V, Jul
       <td>Failed to save</td>
     </tr>
     <tr>
-      <td>C</td>
+      <td>&nbsp&nbsp&nbsp&nbsp C</td>
       <td></td>
       <td>Failed</td>
     </tr>
     <tr>
-      <td>Julia</td>
+      <td>&nbsp&nbsp&nbsp&nbsp Julia</td>
       <td></td>
       <td>Failed</td>
     </tr>
     <tr>
-      <td>Perl</td>
+      <td>&nbsp&nbsp&nbsp&nbsp Perl</td>
       <td></td>
       <td>Failed</td>
     </tr>
@@ -745,7 +743,7 @@ Rust, Go, C, C++, Free Pascal, C#, F#, Java, Python, OCaml, Dart, D, Nim, V, Jul
 
 
 
-<p>في هذه الجولة خرجت المبجّلة  C وكذلك Julia و Perl، ولم يبق إلا  Rust و C++ و Nim . </p>
+<p>في هذه الجولة خرجت المبجّلة  C وكذلك Julia و Perl، ولم يبق إلا  Rust و <span dir="ltr">C++</span> و Nim . </p>
 
 <p>لغة Rust لازالت الأسرع وهي الوحيدة التي استطاعت حفظ الملف.</p>
 
@@ -764,15 +762,15 @@ Rust, Go, C, C++, Free Pascal, C#, F#, Java, Python, OCaml, Dart, D, Nim, V, Jul
   </thead>
   <tbody>
     <tr>
-      <td>Rust</td>
+      <td>&nbsp&nbsp&nbsp&nbsp Rust</td>
       <td>Failed</td>
     </tr>
     <tr>
-      <td>C++</td>
+      <td>&nbsp&nbsp&nbsp&nbsp C++</td>
       <td>Failed</td>
     </tr>
     <tr>
-      <td>Nim</td>
+      <td>&nbsp&nbsp&nbsp&nbsp Nim</td>
       <td>Failed</td>
     </tr>
   </tbody>
@@ -782,17 +780,20 @@ Rust, Go, C, C++, Free Pascal, C#, F#, Java, Python, OCaml, Dart, D, Nim, V, Jul
 
 <h3>نتيجة السباق :</h3>
 <ul>
-  <li>اللغة الأسرع في جميع أحجام النصوص الصغيرة والضخمة هي لغة<b>Rust</b></li>
+  <li>اللغة الأسرع في جميع أحجام النصوص الصغيرة والضخمة هي لغة <b>Rust</b></li>
   <li>اللغة التي استطاعت حفظ أكبر حجم للنص هي لغة <b>Rust</b></li>
+  
+  <li>اللغات التي قاومت لنهاية السباق هي: <span dir="ltr"><b>Rust, Nim, C++</b></span></li>
+
+  <li>اللغات الأكثر تحملا للإجهاد في هذا السباق هي:<b> C ، <span dir="ltr">C++</span> ، Nim ، Rust ، Python ، Julia ، Go، Perl</b></li>
+
 </ul>
 
 <h3>ملاحظات:</h3>
-<hr>
 <ul>
-  <li>توجد لغات سريعة عندما يكون النص صغيرا، إلا انها تفشل تماما عند كبر النص مثل جافا و C#، بالمقابل توجد لغات استطاعت أن تصمد أمام أحجام النصوص الضخمة وإن كانت أبطأ من غيرها في الأحجام الصغيرة.</li>
-  <li>اللغات الأكثر تحملا للإجهاد في هذا السباق هي:<b> C، C++ ، Nim ، Rust ، Python ، Julia ، Go، Perl</b></li>
+  <li>توجد لغات سريعة عندما يكون النص صغيرا، إلا انها تفشل تماما عند كبر النص مثل جافا و <span dir="ltr">C#</span>، بالمقابل توجد لغات استطاعت أن تصمد أمام أحجام النصوص الضخمة وإن كانت أبطأ من غيرها في الأحجام الصغيرة.</li>
   <li>بالنسبة للغات التي لم تتمكن من حفظ الملفات النصية دفعة واحدة، يمكن التحايل على ذلك بتقسيم عملية الحفظ على دفعات. مثال هذا وضعته في ملف كود لغة C من غير أن يتم تنفيذه.</li>
-  <li>لكل لغة تم التشغيل لأكثر من مرة واحتساب الأقل زمنا وليس المتوسط.</li>
+  <li>لكل لغة؛ تم التشغيل لأكثر من مرة واحتساب الأقل زمنا وليس المتوسط.</li>
   <li>بالتأكيد يوجد فرصة للتعديل لكل لغة من أجل أداء أفضل باستخدام ميزات بديلة في اللغة.</li>
 </ul>
 
